--- a/src/static/scss/utilities/_utilities.shame.scss
+++ b/src/static/scss/utilities/_utilities.shame.scss
@@ -32,7 +32,7 @@ body {
         bottom: 0;
         left: 0;
         right: 0;
-        z-index: 900;
+        z-index: 1100;
     }
 
     &.has-search-activated::after {
